modified:   index.html

--- a/Thanks.html
+++ b/Thanks.html
@@ -465,7 +465,7 @@
         });
     </script>
     <!-- 运行时长小组件 -->
-    <div class="runtime-widget" role="note" aria-label="网站运行时长">
+    <div class="runtime-widget" role="note" aria-label="花咲一秋项目运行了：">
         <span>运行:</span>
         <span id="runtime_days" class="odometer">0</span>
         <span>d</span>
