modified:   example.html 	modified:   index.html

--- a/example.html
+++ b/example.html
@@ -94,7 +94,7 @@
 <body>
     <!-- 预加载动画 HTML -->
     <div class="preloader">
-        <h2 class="ml13">Stable Connection CREATED</h2>
+        <h2 class="ml13">[HANASAKI] CONNECTED</h2>
     </div>
 
     <!-- 页面运行时长统计 HTML -->
